* Fancybox  js-files moved on CDNjs.com * Fixed bug with showing images from all galleries on the page. * Fixed bug with z-index on paralax scrolling pages * Prevent loading plugin's libraries if pages are displayed. Plugin loads only for single post * Added option "Load gallery in list of posts" * Support mobile phones * Optimized script speed
git-svn-id: https://plugins.svn.wordpress.org/polaroid-gallery/trunk@951598 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/css/polaroid_gallery.css
+++ b/css/polaroid_gallery.css
@@ -18,6 +18,7 @@
 	padding: 0 !important;
 	visibility: hidden;
 	zoom: 1;
+	z-index: 1;
 }
 .polaroid-gallery a.polaroid-gallery-item {
 	position: relative !important;
